# ai-code-guard

./: .env.example  .gitignore  Guardians_of_EU_template_final.pptx  README.md  __init__.py  main.py  pyproject.toml
app/agents/: compliance_agent.py
app/tools/: code_analyzer.py  compliance_analyzer.py  eu_ai_act_handler.py  github_handler.py
app/ui/: main.py  ui_helpers.py
app/utils/: config.py  download_ai_act.py  initialization.py
src/ai_code_guard/: __init__.py  ai_documentation_scanner.py  eu_ai_act_agent.py  github.py  main.py  summarize_project.py  usage_extraction.py
tests/: test_json_serialization.py  test_vector_store.py
